feat: add image
add image to the header component

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,14 +1,29 @@
 <header class="container">
-  <link
+  <!-- <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
   />
   <div class="d-flex justify-content">
-    <button mat-stroked-button class="">Partner with us</button>
-    <button mat-stroked-button class="material-symbols-outlined">
+    <button mat-stroked-button class="">Partner with us
+
+    </button>
+    <button class="mat-stroked-button material-symbols-outlined">
       Sign up or log in
     </button>
     <button mat-stroked-button class="material-symbols-outlined">Menu</button>
   </div>
-  <div></div>
+  <div></div> -->
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+  />
+  <div class="left-align">
+    <img
+      src="E:\Projects\deliveroo-clone\src\assets\images\257-2571124_deliveroo-logo-vector-hd-png-download.png"
+      alt="deliveroo-logo"
+    />
+  </div>
+  <div>
+    <span class="material-symbols-outlined">menu</span>
+  </div>
 </header>
