feat: add footer items
add footer items

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,4 +1,4 @@
-<! DOCTYPE html>
+<!-- <! DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -115,8 +115,8 @@
                   <div class="footer-links">
                     <ul class="list-unstyled mb-0">
                       <li>
-                        <!-- App Store button -->
-                        <a
+                        App Store button -->
+<!--<a
                           href="https://www.kobinet.com.tr/"
                           target="_blank"
                           class="market-btn apple-btn"
@@ -128,7 +128,7 @@
                           <span class="market-button-title">App Store</span>
                         </a>
                       </li>
-                      <!-- Google Play button -->
+                      Google Play button
                       <li>
                         <a
                           href="https://www.kobinet.com.tr/"
@@ -166,4 +166,78 @@
       </div>
     </div>
   </body>
-</html>
+</html>-->
+<footer class="container">
+  <div class="row">
+    <div class="col-md-12 col-md-6 col-md-3 card">
+      <div class="footer-title">Discover Deliveroo</div>
+      <div class="footer-links">
+        <ul class="list-unstyled mb-0">
+          <li>
+            <a href="#!" class="text-white">Investors</a>
+          </li>
+          <li>
+            <a href="#!" class="text-white">About us</a>
+          </li>
+          <li>
+            <a href="#!" class="text-white">Takeaway</a>
+          </li>
+          <li>
+            <a href="#!" class="text-white">More</a>
+          </li>
+          <li>
+            <a href="#!" class="text-white">Newsroom</a>
+          </li>
+          <li>
+            <a href="#!" class="text-white">Engineering blog</a>
+          </li>
+          <li>
+            <a href="#!" class="text-white">Design blog</a>
+          </li>
+          <li>
+            <a href="#!" class="text-white">Gift Cards</a>
+          </li>
+          <li>
+            <a href="#!" class="text-white">Careers</a>
+          </li>
+          <li>
+            <a href="#!" class="text-white">Restaurant signup</a>
+          </li>
+          <li>
+            <a href="#!" class="text-white">Become a rider</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-3 m-b-30 box">
+        <div class="footer-title">Legal</div>
+        <div class="footer-links">
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Terms and conditions</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Privacy</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Cookies</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Modern Slavery Statement</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Tax Strategy</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Section 172 Statement</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="d-flex justify-content-end">
+      <div></div>
+      <div class="col-md-12">© 2023 Deliveroo</div>
+    </div>
+  </div>
+</footer>
