--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-end">
+    <div class="d-flex justify-content-start">
       <div></div>
       <div class="col-md-12">© 2023 Deliveroo</div>
     </div>
