--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,29 +1,18 @@
-<header class="container">
-  <!-- <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-  />
-  <div class="d-flex justify-content">
-    <button mat-stroked-button class="">Partner with us
-
-    </button>
-    <button class="mat-stroked-button material-symbols-outlined">
-      Sign up or log in
-    </button>
-    <button mat-stroked-button class="material-symbols-outlined">Menu</button>
-  </div>
-  <div></div> -->
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-  />
-  <div class="left-align">
-    <img
-      src="E:\Projects\deliveroo-clone\src\assets\images\257-2571124_deliveroo-logo-vector-hd-png-download.png"
-      alt="deliveroo-logo"
-    />
-  </div>
-  <div>
-    <span class="material-symbols-outlined">menu</span>
+<header>
+  <div class="container">
+    <div class="d-flex justify-content-start">
+      <div class="row">
+        <img
+          src="E:\Projects\deliveroo-clone\src\assets\images\deliveroo_2.png"
+          alt="deliveroo-logo"
+          style="width: 50px; height: 20px"
+        />
+      </div>
+      <div class="d-flex justify-content-end">
+        <button mat-stroked-button>Partner with us</button>
+        <button mat-stroked-button>Signup or login</button>
+        <button mat-stroked-button>Menu</button>
+      </div>
+    </div>
   </div>
 </header>
