feat: add footer items
add footer items

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,243 +1,146 @@
-<!-- <! DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <footer class="footer">
-            <div class="container side-margin">
-              <div class="row">
-                <div class="col-md-3 m-b-30 box">
-                  <div class="footer-title m-t-5 m-b-20 p-b-8">
-                    Discover Deliveroo
-                  </div>
-                  <div class="footer-links">
-                    <ul class="list-unstyled mb-0">
-                      <li>
-                        <a href="#!" class="text-white">Investors</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">About us</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Takeaway</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">More</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Newsroom</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Engineering blog</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Design blog</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Gift Cards</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Careers</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Restaurant signup</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Become a rider</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-md-3 m-b-30 box">
-                  <div class="footer-title m-t-5 m-b-20 p-b-8">Legal</div>
-                  <div class="footer-links">
-                    <ul class="list-unstyled mb-0">
-                      <li>
-                        <a href="#!" class="text-white">Terms and conditions</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Privacy</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Cookies</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white"
-                          >Modern Slavery Statement</a
-                        >
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Tax Strategy</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white"
-                          >Section 172 Statement</a
-                        >
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-md-3 m-b-30 box">
-                  <div class="footer-title m-t-5 m-b-20 p-b-8">Help</div>
-                  <div class="footer-links">
-                    <ul class="list-unstyled mb-0">
-                      <li>
-                        <a href="#!" class="text-white">Contact</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">FAQs</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Cuisines</a>
-                      </li>
-                      <li>
-                        <a href="#!" class="text-white">Brands</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-md-3 m-b-30 box">
-                  <div class="footer-title m-t-5 m-b-20 p-b-8">
-                    Take Deliveroo with you
-                  </div>
-                  <div class="footer-links">
-                    <ul class="list-unstyled mb-0">
-                      <li>
-                        App Store button -->
-<!--<a
-                          href="https://www.kobinet.com.tr/"
-                          target="_blank"
-                          class="market-btn apple-btn"
-                          role="button"
-                        >
-                          <span class="market-button-subtitle"
-                            >Download on the</span
-                          >
-                          <span class="market-button-title">App Store</span>
-                        </a>
-                      </li>
-                      Google Play button
-                      <li>
-                        <a
-                          href="https://www.kobinet.com.tr/"
-                          target="_blank"
-                          class="market-btn google-btn"
-                          role="button"
-                        >
-                          <span class="market-button-subtitle"
-                            >Download on the</span
-                          >
-                          <span class="market-button-title">Google Play</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </footer>
-          <div class="footer-social-links m-t-30">
-            <li>
-              <a href="#">
-                <i class="fa fa-facebook" aria-hidden="true"> </i>
-              </a>
-              <a href="#">
-                <i class="fa fa-twitter" aria-hidden="true"> </i>
-              </a>
-              <a href="#">
-                <i class="fa fa-instagram" aria-hidden="true"> </i>
-              </a>
-            </li>
-          </div>
-          <div class="footer-bottom">Copyright ? 2017, All Rights Reserved</div>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>-->
 <footer class="container">
   <div class="row">
-    <div class="col-md-12 col-md-6 col-md-3 card">
-      <div class="footer-title">Discover Deliveroo</div>
-      <div class="footer-links">
-        <ul class="list-unstyled mb-0">
-          <li>
-            <a href="#!" class="text-white">Investors</a>
-          </li>
-          <li>
-            <a href="#!" class="text-white">About us</a>
-          </li>
-          <li>
-            <a href="#!" class="text-white">Takeaway</a>
-          </li>
-          <li>
-            <a href="#!" class="text-white">More</a>
-          </li>
-          <li>
-            <a href="#!" class="text-white">Newsroom</a>
-          </li>
-          <li>
-            <a href="#!" class="text-white">Engineering blog</a>
-          </li>
-          <li>
-            <a href="#!" class="text-white">Design blog</a>
-          </li>
-          <li>
-            <a href="#!" class="text-white">Gift Cards</a>
-          </li>
-          <li>
-            <a href="#!" class="text-white">Careers</a>
-          </li>
-          <li>
-            <a href="#!" class="text-white">Restaurant signup</a>
-          </li>
-          <li>
-            <a href="#!" class="text-white">Become a rider</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-md-3 m-b-30 box">
-        <div class="footer-title">Legal</div>
-        <div class="footer-links">
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-white">Terms and conditions</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Privacy</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Cookies</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Modern Slavery Statement</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Tax Strategy</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Section 172 Statement</a>
-            </li>
-          </ul>
+    <div class="d-flex justify-content-center">
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Discover Deliveroo</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Investors</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">About us</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Takeaway</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">More</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Newsroom</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Engineering blog</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Design blog</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Gift Cards</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Careers</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Restaurant signup</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Become a rider</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Legal</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Terms and conditions</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Privacy</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Cookies</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Modern Slavery Statement</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Tax Strategy</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Section 172 Statement</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Help</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Contact</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">FAQs</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Cuisines</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Brands</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Take Deliveroo with you</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a
+                  href="https://www.kobinet.com.tr/"
+                  target="_blank"
+                  class="market-btn apple-btn"
+                  role="button"
+                >
+                  <span class="market-button-subtitle">Download on the</span>
+                  <span class="market-button-title">App Store</span>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.kobinet.com.tr/"
+                  target="_blank"
+                  class="market-btn google-btn"
+                  role="button"
+                >
+                  <span class="market-button-subtitle">Download on the</span>
+                  <span class="market-button-title">Google Play</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-
+  </div>
+  <div class="row">
     <div class="d-flex justify-content-start">
-      <div></div>
-      <div class="col-md-12">© 2023 Deliveroo</div>
+      <img
+        src="E:\Projects\deliveroo-clone\src\assets\svg\facebook-svgrepo-com.svg"
+        alt="facebook"
+        height="87"
+        width="100"
+      />
+      <img
+        src="E:\Projects\deliveroo-clone\src\assets\svg\twitter-svgrepo-com.svg"
+        alt="twitter"
+        height="87"
+        width="100"
+      />
+      <img
+        src="E:\Projects\deliveroo-clone\src\assets\svg\instagram-svgrepo-com.svg"
+        alt="instagram"
+        height="87"
+        width="100"
+      />
+    </div>
+    <div class="d-flex justify-content-end">
+      <p style="color: aliceblue">© 2023 Deliveroo</p>
     </div>
   </div>
 </footer>
