feat: header and footer adjustment
add svgs and images to display

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -121,19 +121,20 @@
   <div class="row">
     <div class="d-flex justify-content-start">
       <img
-        src="E:\Projects\deliveroo-clone\src\assets\svg\facebook-svgrepo-com.svg"
+        src="assets\svg\facebook-svgrepo-com.svg"
         alt="facebook"
         height="87"
         width="100"
+        class="change-my-color"
       />
       <img
-        src="E:\Projects\deliveroo-clone\src\assets\svg\twitter-svgrepo-com.svg"
+        src="assets\svg\twitter-svgrepo-com.svg"
         alt="twitter"
         height="87"
         width="100"
       />
       <img
-        src="E:\Projects\deliveroo-clone\src\assets\svg\instagram-svgrepo-com.svg"
+        src="assets\svg\instagram-svgrepo-com.svg"
         alt="instagram"
         height="87"
         width="100"
