--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-start">
       <div class="row">
         <img
-          src="E:\Projects\deliveroo-clone\src\assets\images\deliveroo_2.png"
+          src="assets\images\deliveroo_2.png"
           alt="deliveroo-logo"
           style="width: 50px; height: 20px"
         />
