--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,18 +1,20 @@
 <header>
-  <div class="container">
-    <div class="d-flex justify-content-start">
-      <div class="row">
-        <img
-          src="assets\images\deliveroo_2.png"
-          alt="deliveroo-logo"
-          style="width: 50px; height: 20px"
-        />
-      </div>
-      <div class="d-flex justify-content-end">
-        <button mat-stroked-button>Partner with us</button>
-        <button mat-stroked-button>Signup or login</button>
-        <button mat-stroked-button>Menu</button>
+  <section class="background-color-header">
+    <div class="container">
+      <div class="d-flex justify-content-start">
+        <div class="row">
+          <img
+            src="assets\svg\cdnlogo.com_deliveroo.svg"
+            alt="deliveroo-logo"
+            style="width: 121px; height: 32px"
+          />
+        </div>
+        <div class="d-flex justify-content-end">
+          <button mat-stroked-button>Partner with us</button>
+          <button mat-stroked-button>Signup or login</button>
+          <button mat-stroked-button>Menu</button>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 </header>
