feat: changes in footer card color and font color

--- a/src/app/common/footer/footer.component.scss
+++ b/src/app/common/footer/footer.component.scss
@@ -6,12 +6,16 @@ h4 {
   color: aliceblue;
 }
 
-li {
+a {
   color: aliceblue;
+}
+.card {
+  background-color: #7a8686;
 }
 .alt {
 color: aliceblue;
 }
+
 
 .change-my-color {
   fill: aliceblue;
