feat: improve footer
improve css and bootstrap in footer

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,123 +1,129 @@
-<section class="background-color-footer">
+<!-- <section class="background-color-footer">
   <footer class="container">
     <div class="row">
       <div class="d-flex justify-content-center">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Discover Deliveroo</h4>
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a href="#!" class="text-white">Investors</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">About us</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Takeaway</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">More</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Newsroom</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Engineering blog</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Design blog</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Gift Cards</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Careers</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Restaurant signup</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Become a rider</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Legal</h4>
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a href="#!" class="text-white">Terms and conditions</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Privacy</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Cookies</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Modern Slavery Statement</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Tax Strategy</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Section 172 Statement</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Help</h4>
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a href="#!" class="text-white">Contact</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">FAQs</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Cuisines</a>
-                </li>
-                <li>
-                  <a href="#!" class="text-white">Brands</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Take Deliveroo with you</h4>
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a
-                    href="https://www.kobinet.com.tr/"
-                    target="_blank"
-                    class="market-btn apple-btn"
-                    role="button"
-                  >
-                    <span class="market-button-subtitle">Download on the</span>
-                    <span class="market-button-title">App Store</span>
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="https://www.kobinet.com.tr/"
-                    target="_blank"
-                    class="market-btn google-btn"
-                    role="button"
-                  >
-                    <span class="market-button-subtitle">Download on the</span>
-                    <span class="market-button-title">Google Play</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
+      <div class="column">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Discover Deliveroo</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Investors</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">About us</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Takeaway</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">More</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Newsroom</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Engineering blog</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Design blog</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Gift Cards</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Careers</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Restaurant signup</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Become a rider</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
+      <div class="coloumn">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Legal</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Terms and conditions</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Privacy</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Cookies</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Modern Slavery Statement</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Tax Strategy</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Section 172 Statement</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Help</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Contact</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">FAQs</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Cuisines</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Brands</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="coloumn">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Take Deliveroo with you</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a
+                  href="https://www.kobinet.com.tr/"
+                  target="_blank"
+                  class="market-btn apple-btn"
+                  role="button"
+                >
+                  <span class="market-button-subtitle">Download on the</span>
+                  <span class="market-button-title">App Store</span>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.kobinet.com.tr/"
+                  target="_blank"
+                  class="market-btn google-btn"
+                  role="button"
+                >
+                  <span class="market-button-subtitle">Download on the</span>
+                  <span class="market-button-title">Google Play</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
     <div class="row">
       <div class="d-flex justify-content-start">
@@ -142,6 +148,157 @@
         />
       </div>
       <div class="d-flex justify-content-end">
+        <p style="color: aliceblue">© 2023 Deliveroo</p>
+      </div>
+    </div>
+  </footer>
+</section> -->
+
+<!-- New code -->
+<section class="background-color-footer">
+  <footer class="container">
+    <div class="flex-container">
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <h4 class="card-title">Discover Deliveroo</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Investors</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">About us</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Takeaway</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">More</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Newsroom</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Engineering blog</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Design blog</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Gift Cards</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Careers</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Restaurant signup</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Become a rider</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <h4 class="card-title">Legal</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Terms and conditions</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Privacy</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Cookies</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Modern Slavery Statement</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Tax Strategy</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Section 172 Statement</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <h4 class="card-title">Help</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Contact</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">FAQs</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Cuisines</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Brands</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <h4 class="card-title">Take Deliveroo with you</h4>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a
+                  href="https://www.kobinet.com.tr/"
+                  target="_blank"
+                  class="market-btn apple-btn"
+                  role="button"
+                >
+                  <span class="market-button-subtitle">Download on the</span>
+                  <span class="market-button-title">App Store</span>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.kobinet.com.tr/"
+                  target="_blank"
+                  class="market-btn google-btn"
+                  role="button"
+                >
+                  <span class="market-button-subtitle">Download on the</span>
+                  <span class="market-button-title">Google Play</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="column">
+        <img
+          src="assets\svg\facebook-svgrepo-com.svg"
+          alt="facebook"
+          height="35"
+          width="35"
+          class="change-my-color"
+        />
+        <img
+          src="assets\svg\twitter-svgrepo-com.svg"
+          alt="twitter"
+          height="35"
+          width="35"
+        />
+        <img
+          src="assets\svg\instagram-svgrepo-com.svg"
+          alt="instagram"
+          height="35"
+          width="35"
+        />
+      </div>
+
+      <div class="column">
         <p style="color: aliceblue">© 2023 Deliveroo</p>
       </div>
     </div>
