feat: add app and play store links
add app store and play store svgs in the footer

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -248,25 +248,23 @@
             <h4 class="card-title">Take Deliveroo with you</h4>
             <ul class="list-unstyled mb-0">
               <li>
-                <a
-                  href="https://www.kobinet.com.tr/"
-                  target="_blank"
-                  class="market-btn apple-btn"
-                  role="button"
-                >
-                  <span class="market-button-subtitle">Download on the</span>
-                  <span class="market-button-title">App Store</span>
+                <a href="">
+                  <img
+                    src="assets\svg\download-on-the-app-store-apple-logo-svgrepo-com.svg"
+                    alt="AppStore"
+                    height="150"
+                    width="250"
+                  />
                 </a>
               </li>
               <li>
-                <a
-                  href="https://www.kobinet.com.tr/"
-                  target="_blank"
-                  class="market-btn google-btn"
-                  role="button"
-                >
-                  <span class="market-button-subtitle">Download on the</span>
-                  <span class="market-button-title">Google Play</span>
+                <a href="">
+                  <img
+                    src="assets\svg\google-play-download-android-app-logo-svgrepo-com.svg"
+                    alt="google play store"
+                    height="150"
+                    width="250"
+                  />
                 </a>
               </li>
             </ul>
