--- a/src/app/common/footer/footer.component.scss
+++ b/src/app/common/footer/footer.component.scss
@@ -65,9 +65,14 @@ h4 {
   }
 
 a {
+  text-decoration: none;
   color: aliceblue;
   font-size: 24;
 }
+a:hover {
+  color: aqua;
+}
+
 p {
   text-align: end;
 }
