--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -248,7 +248,9 @@
             <h4 class="card-title">Take Deliveroo with you</h4>
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="">
+                <a
+                  href="https://apps.apple.com/us/app/deliveroo-food-delivery-app/id1001501844"
+                >
                   <img
                     src="assets\svg\download-on-the-app-store-apple-logo-svgrepo-com.svg"
                     alt="AppStore"
@@ -258,7 +260,9 @@
                 </a>
               </li>
               <li>
-                <a href="">
+                <a
+                  href="https://play.google.com/store/apps/details?id=com.deliveroo.orderapp&hl=en&gl=US&pli=1"
+                >
                   <img
                     src="assets\svg\google-play-download-android-app-logo-svgrepo-com.svg"
                     alt="google play store"
