feat: add links
add social media links to facebook, twitter and instagram

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -279,27 +279,34 @@
 
     <div class="row">
       <div class="column">
-        <img
-          src="assets\svg\facebook-svgrepo-com.svg"
-          alt="facebook"
-          height="35"
-          width="35"
-          class="change-my-color"
-        />
-        <img
-          src="assets\svg\twitter-svgrepo-com.svg"
-          alt="twitter"
-          height="35"
-          width="35"
-        />
-        <img
-          src="assets\svg\instagram-svgrepo-com.svg"
-          alt="instagram"
-          height="35"
-          width="35"
-        />
+        <a href="https://www.facebook.com/Deliveroo/">
+          <img
+            src="assets\svg\facebook-svgrepo-com.svg"
+            alt="facebook"
+            height="35"
+            width="35"
+            class="change-my-color"
+          />
+        </a>
+        <a
+          href="https://twitter.com/i/flow/login?redirect_after_login=%2FDeliveroo%3Fref_src%3Dtwsrc%255Egoogle%257Ctwcamp%255Eserp%257Ctwgr%255Eauthor"
+        >
+          <img
+            src="assets\svg\twitter-svgrepo-com.svg"
+            alt="twitter"
+            height="35"
+            width="35"
+          />
+        </a>
+        <a href="https://www.instagram.com/deliveroo/?hl=en">
+          <img
+            src="assets\svg\instagram-svgrepo-com.svg"
+            alt="instagram"
+            height="35"
+            width="35"
+          />
+        </a>
       </div>
-
       <div class="column">
         <p style="color: aliceblue">© 2023 Deliveroo</p>
       </div>
